--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p><strong>Last Updated:</strong> [Insert Date]</p>
+        <p><strong>Last Updated:</strong> 06-03-2025</p>
 
         <h2>1. No Personal Data Collection</h2>
         <p>Appuntes Pro does <strong>not</strong> collect, store, or process any personal data. We do not require user registration, login credentials, or any personally identifiable information.</p>
@@ -65,11 +65,11 @@
 
         <h2>8. Contact Us</h2>
         <p>If you have any questions or concerns about this Privacy Policy, please contact us:</p>
-        <p>📧 <strong>[Insert Contact Email]</strong></p>
+        <p>📧 <strong>harysvizcaino@gmail.com</strong></p>
     </div>
 
     <footer>
-        &copy; 2024 Appuntes Pro. All Rights Reserved.
+        &copy; 2025 Appuntes Pro. All Rights Reserved.
     </footer>
 
 </body>
